# STMN

./: .gitignore  BatchProviderBase_StaticImg.lua  BatchProviderROI_StaticImg.lua  BatchProviderVID.lua  ColorTransformer.lua  DataSetJSON.lua  ImageDetect.lua  LICENSE  README.md  Tester_VID.lua  config.lua  data_static.lua  data_video.lua  donkey_static.lua  fbcoco.lua  myutils.lua  nms.c  train_video.lua  utils.lua
engines/: Optim.lua  fboptimengine.lua
loaders/: dataloader.lua
models/: model.lua  model_utils.lua
modules/: AdaLinearScale.lua  BatchBilinearSamplerBHWD.lua  BilinearRoiPooling.lua  BoxToAffine.lua  ClearGradient.lua  DbTunnel.lua  FixedIndex.lua  ImageTransformer.lua  MaskCrossEntropyCriterion.lua  MaskRowSmoothL1Criterion.lua  MatchTrans.lua  STMM.lua  SelectBoxes.lua  VidFlip.lua
modules/assemble/: CMakeLists.txt  README.md  assemble-0.1-0.rockspec  assemble.cu  assemble.lua  ffi.lua  init.lua
modules/assemble_cunn/cunn/: Assemble.cu
modules/assemble_cunn/cunn/generic/: Assemble.cu
modules/assemble_cunn/nn/: Assemble.c
modules/rfcn/: CMakeLists.txt  PSROIPooling.cu  PSROIPooling.lua  ffi.lua  gpu_util.cuh  init.lua  rfcn-0.1-0.rockspec
modules/stnbhwd/: CMakeLists.txt
scripts/: compute_mAP.lua  compute_proposal.lua  create_annotation.lua  eval_detect_full.lua  launcher.py
